--- a/src/second-block.css
+++ b/src/second-block.css
@@ -57,23 +57,7 @@ height: 286px;
 border-radius: 15px;
 }
 
-.recblocktext{
-      position: absolute;
-  bottom: 33px;
-  width:160px;
-  height: 40px;
-  font-size: 14px;
-  font-weight: 600;
-  color: #1F1F1F;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #FFFFFF;
-  border-radius:30px ;
-  font-family: Montserrat;
-  text-transform: uppercase;
-  margin-left:28px
-}
+
 
 .imgblocknew1 {
   display: grid;
@@ -106,4 +90,85 @@ height:675px;
 {
       display: grid;
   gap: 21px;
+}
+
+.gridcatalogue
+{
+  display:grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap:30px;
+}
+
+.gridcatalogueitem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.gridcatalogue img{
+  width: 140px;
+height: 145px;
+top: 6px;
+border-radius: 15px;
+}
+
+.ideasgrid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 21px;
+  padding: 20px 0;
+}
+
+.ideasgrid1,
+.ideasgrid2 {
+  display: grid;
+  gap: 21px;
+  height: 70%; /* important */
+}
+
+.ideasgrid1 {
+  grid-template-rows: 2fr 1fr;
+}
+
+.ideasgrid2 {
+  grid-template-rows: 1fr 2fr;
+}
+
+
+.image-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.image-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 15px;
+  display: block;
+}
+.ideasname {
+  display: flex;
+  flex-direction: rows;
+  gap:20px;
+padding: 20px 0 10px 0;
+}
+
+.nameideas{
+     
+  width:160px;
+  height: 40px;
+  font-size: 14px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius:30px ;
+  font-family: Montserrat;
+  text-transform: uppercase;
+  background-color: #F2F2F2;
 }
